tenants/anami/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anami-frontend-ingress
  namespace: anami-masoterapia
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  tls:
  - hosts:
    - temucomasajes.cl
    - www.temucomasajes.cl
    secretName: temucomasajes-tls
  rules:
  - host: temucomasajes.cl
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anami-frontend-svc
            port:
              number: 80
  - host: www.temucomasajes.cl
    http: *http_rules
